5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1679_1880.log
== SUBMITION (2019-05-01 21:44:03) 
-- CODE:
m = int(input())

if ( 1 <= m <= 12):
	elif (m == 1):
		print("janeiro")
	elif (m == 2):
		print("fevereiro") 
	elif (m == 3):
		print("marco")
	elif (m == 4):
		print("abril")
	elif (m == 5):
		print("maio")
	elif (m == 6):
		print("junho")
	elif (m == 7):
		print("julho")
	elif (m == 8):
		print("agosto")
	elif (m == 9):
		print("setembro")
	elif (m == 10):
		print("outubro")
	elif (m == 11):
		print("novembro")
	elif (m == 12):
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.262753
-- ERROR:
  File "/home/codebench/codes/1679/1880/main.py", line 4
    elif (m == 1):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:47:57) 
-- CODE:
m = int(input())

if ( 1 <= m <= 12):
	if (m == 1):
		print("janeiro")
	elif (m == 2):
		print("fevereiro") 
	elif (m == 3):
		print("marco")
	elif (m == 4):
		print("abril")
	elif (m == 5):
		print("maio")
	elif (m == 6):
		print("junho")
	elif (m == 7):
		print("julho")
	elif (m == 8):
		print("agosto")
	elif (m == 9):
		print("setembro")
	elif (m == 10):
		print("outubro")
	elif (m == 11):
		print("novembro")
	elif (m == 12):
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.146352
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
